<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SFQuizz</string>
    <string name="welcomeMessage">Press screen to start!</string>
    <string name="eula_accept">Accept</string>
    <string name="quit">Quit</string>
    <string name="usageStatistics">Statistics</string>
    <string name="next">Next</string>
    <string name="resumeGame">Resume game</string>
    <string name="newGame">New game</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="wrong_message">Correct answer was: </string>
    <string name="quit_message">Do you really want to quit?</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="stats1">You have correctly answered to</string>
    <string name="stats2">of</string>
    <string name="stats3">questions</string>
    <string name="stats4">You have not answered any question</string>
    <string name="end_quizz">Game over\n\nCongratulations, you have correctly answered to</string>
    <string name="eula_refuse">Refuser</string>
    <string name="eula_title">License agreement</string>
    <string name="score">Score:</string>
</resources>
