<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_accueil"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="top|left"
        android:padding="3dp"
        android:text="@string/welcomeMessage"
        android:textColor="#EEEEEE"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/QuestiontextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:padding="3dp"
        android:layout_weight="0.25"
        android:layout_gravity="top|left"
        android:textColor="#EEEEEE"
        android:textSize="17dp"
        android:textStyle="bold"
        android:visibility="gone" >
    </TextView>

    <RadioGroup
        android:id="@+id/ChoicesRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textSize="16dp"
        android:visibility="gone" >

        <RadioButton
            android:id="@+id/Choice1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:textColor="#EEEEEE"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Choice2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:textColor="#EEEEEE"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Choice3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:textColor="#EEEEEE"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RadioGroup>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menuLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_weight="0.25"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonNewGame"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_grey"
                android:focusable="false"
                android:padding="10dip"
                android:text="@string/newGame"
                android:textColor="#eaeaea"
                android:textSize="16dp"
                android:textStyle="italic" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/buttonResumeGame"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_grey"
                android:focusable="false"
                android:padding="10dip"
                android:text="@string/resumeGame"
                android:textColor="#eaeaea"
                android:textSize="16dp"
                android:textStyle="italic"
                android:visibility="gone"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/footerTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="bottom"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <TextView
                android:id="@+id/ScoreTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:capitalize="characters"
                android:gravity="center_horizontal"
                android:textColor="#EEEEEE"
                android:textSize="18dp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/button03"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dip"
                android:textColor="#eaeaea"
                android:background="@drawable/custom_button_grey"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dip"
                android:text="@string/usageStatistics"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button02"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dip"
                android:textColor="#eaeaea"
                android:background="@drawable/custom_button_grey"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dip"
                android:text="@string/quit"
                android:textStyle="italic" />
        </TableRow>
    </TableLayout>

</LinearLayout>